@@ -109,15 +109,6 @@ public class XMLRPCClient {
 	public static final int FLAGS_SSL_IGNORE_INVALID_HOST = 0x40;
 
 	/**
-	 * With this flag enabled, the client will ignore all unverified SSL/TLS
-	 * certificates. This must be used, if you use self-signed certificates
-	 * or certificated from unknown (or untrusted) authorities. If this flag is
-	 * used, calls to {@link #installCustomTrustManager(javax.net.ssl.TrustManager)}
-	 * won't have any effect.
-	 */
-	public static final int FLAGS_SSL_IGNORE_INVALID_CERT = 0x80;
-
-	/**
 	 * With this flag enabled, a value with a missing type tag, will be parsed
 	 * as a string element. This is just for incoming messages. Outgoing messages
 	 * will still be generated according to specification.
@@ -156,14 +147,6 @@ public class XMLRPCClient {
 	 * Do NOT use if you don't need it.
 	 */
 	public static final int FLAGS_DEBUG = 0x2000;
-
-	/**
-	 * This flag disables all SSL warnings. It is an alternative to use
-	 * FLAGS_SSL_IGNORE_INVALID_CERT | FLAGS_SSL_IGNORE_INVALID_HOST. There
-	 * is no functional difference.
-	 */
-	public static final int FLAGS_SSL_IGNORE_ERRORS =
-			FLAGS_SSL_IGNORE_INVALID_CERT | FLAGS_SSL_IGNORE_INVALID_HOST;
 
 	/**
 	 * This flag should be used if the server is an apache ws xmlrpc server.
@@ -215,23 +198,6 @@ public class XMLRPCClient {
 
 		httpParameters.put(CONTENT_TYPE, TYPE_XML);
 		httpParameters.put(USER_AGENT, userAgent);
-
-		// If invalid ssl certs are ignored, instantiate an all trusting TrustManager
-		if(isFlagSet(FLAGS_SSL_IGNORE_INVALID_CERT)) {
-			trustManagers = new TrustManager[] {
-				new X509TrustManager() {
-					public void checkClientTrusted(X509Certificate[] xcs, String string)
-							throws CertificateException { }
-
-					public void checkServerTrusted(X509Certificate[] xcs, String string)
-							throws CertificateException { }
-
-					public X509Certificate[] getAcceptedIssuers() {
-						return null;
-					}
-				}
-			};
-		}
 
 		if(isFlagSet(FLAGS_USE_SYSTEM_PROXY)) {
 			// Read system proxy settings and generate a proxy from that
@@ -386,61 +352,49 @@ public class XMLRPCClient {
 	/**
 	 * Installs a custom {@link TrustManager} to handle SSL/TLS certificate verification.
 	 * This will replace any previously installed {@code TrustManager}s.
-	 * If {@link #FLAGS_SSL_IGNORE_INVALID_CERT} is set, this won't do anything.
 	 *
 	 * @param trustManager {@link TrustManager} to install.
 	 *
 	 * @see #installCustomTrustManagers(javax.net.ssl.TrustManager[])
 	 */
 	public void installCustomTrustManager(TrustManager trustManager) {
-		if(!isFlagSet(FLAGS_SSL_IGNORE_INVALID_CERT)) {
-			trustManagers = new TrustManager[] { trustManager };
-		}
+		trustManagers = new TrustManager[] { trustManager };
 	}
 
 	/**
 	 * Installs custom {@link TrustManager TrustManagers} to handle SSL/TLS certificate
 	 * verification. This will replace any previously installed {@code TrustManagers}s.
-	 * If {@link #FLAGS_SSL_IGNORE_INVALID_CERT} is set, this won't do anything.
 	 *
 	 * @param trustManagers {@link TrustManager TrustManagers} to install.
 	 *
 	 * @see #installCustomTrustManager(javax.net.ssl.TrustManager)
 	 */
 	public void installCustomTrustManagers(TrustManager[] trustManagers) {
-		if(!isFlagSet(FLAGS_SSL_IGNORE_INVALID_CERT)) {
-			this.trustManagers = trustManagers.clone();
-		}
+		this.trustManagers = trustManagers.clone();
 	}
 
     /**
      * Installs a custom {@link KeyManager} to handle SSL/TLS certificate verification.
      * This will replace any previously installed {@code KeyManager}s.
-     * If {@link #FLAGS_SSL_IGNORE_INVALID_CERT} is set, this won't do anything.
      *
      * @param keyManager {@link KeyManager} to install.
      *
      * @see #installCustomKeyManagers(javax.net.ssl.KeyManager[])
      */
     public void installCustomKeyManager(KeyManager keyManager) {
-        if(!isFlagSet(FLAGS_SSL_IGNORE_INVALID_CERT)) {
-            keyManagers = new KeyManager[] { keyManager };
-        }
+    	keyManagers = new KeyManager[] { keyManager };
     }
 
     /**
      * Installs custom {@link KeyManager KeyManagers} to handle SSL/TLS certificate
      * verification. This will replace any previously installed {@code KeyManagers}s.
-     * If {@link #FLAGS_SSL_IGNORE_INVALID_CERT} is set, this won't do anything.
      *
      * @param keyManagers {@link KeyManager KeyManagers} to install.
      *
      * @see #installCustomKeyManager(javax.net.ssl.KeyManager)
      */
     public void installCustomKeyManagers(KeyManager[] keyManagers) {
-      if(!isFlagSet(FLAGS_SSL_IGNORE_INVALID_CERT)) {
-        this.keyManagers = keyManagers.clone();
-      }
+    	this.keyManagers = keyManagers.clone();
     }
 
 	/**
